fixup some history not graceful code3 and scala format code add logo 2